# solvr

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: lib.rs  window.rs
src/cluster/: mod.rs  validation.rs
src/cluster/cpu/: affinity_propagation.rs  bayesian_gmm.rs  bisecting_kmeans.rs  dbscan.rs  gmm.rs  hdbscan.rs  hierarchy.rs  kmeans.rs  mean_shift.rs  metrics.rs  mini_batch_kmeans.rs  mod.rs  optics.rs  spectral.rs
src/cluster/cuda/: affinity_propagation.rs  bayesian_gmm.rs  bisecting_kmeans.rs  dbscan.rs  gmm.rs  hdbscan.rs  hierarchy.rs  kmeans.rs  mean_shift.rs  metrics.rs  mini_batch_kmeans.rs  mod.rs  optics.rs  spectral.rs
src/cluster/impl_generic/: affinity_propagation.rs  bayesian_gmm.rs  bisecting_kmeans.rs  dbscan.rs  gmm.rs  hdbscan.rs  hierarchy.rs  kmeans.rs  mean_shift.rs  metrics.rs  mini_batch_kmeans.rs  mod.rs  optics.rs  spectral.rs
src/cluster/traits/: affinity_propagation.rs  bayesian_gmm.rs  bisecting_kmeans.rs  dbscan.rs  gmm.rs  hdbscan.rs  hierarchy.rs  kmeans.rs  mean_shift.rs  metrics.rs  mini_batch_kmeans.rs  mod.rs  optics.rs  spectral.rs
src/cluster/wgpu/: affinity_propagation.rs  bayesian_gmm.rs  bisecting_kmeans.rs  dbscan.rs  gmm.rs  hdbscan.rs  hierarchy.rs  kmeans.rs  mean_shift.rs  metrics.rs  mini_batch_kmeans.rs  mod.rs  optics.rs  spectral.rs
src/graph/: mod.rs
src/graph/cpu/: centrality.rs  connectivity.rs  flow.rs  matrices.rs  mst.rs  shortest_path.rs
src/graph/cuda/: centrality.rs  connectivity.rs  flow.rs  matrices.rs  mod.rs  (+2 more)
src/integrate/: cpu.rs  cuda.rs  mod.rs  wgpu.rs
src/interpolate/: akima.rs  cubic_spline.rs  error.rs  hermite_core.rs  interp1d.rs  mod.rs  pchip.rs
src/linalg/: mod.rs
src/optimize/: error.rs  global.rs  least_squares.rs  linprog.rs  mod.rs  utils.rs
src/signal/: cuda.rs  mod.rs  stft_core.rs  wgpu.rs
src/spatial/: mod.rs  validation.rs
src/stats/: error.rs  helpers.rs  mod.rs
src/window/: generators.rs  generators_reexport.rs  mod.rs
(+448 files in other folders)
