[package]
name = "solvr"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Advanced computing library for real-world problem solving - optimization, differential equations, interpolation, statistics, and more"
license = "Apache-2.0"
repository = "https://github.com/ml-rust/solvr"
homepage = "https://github.com/ml-rust/solvr"
documentation = "https://docs.rs/solvr"
readme = "README.md"
keywords = ["solver", "optimization", "ode", "interpolation", "statistics"]
categories = ["algorithms", "mathematics", "science"]

[dependencies]
numr = { version = "0.1.1" }

[dev-dependencies]

[features]
default = ["graph", "pde"]

# Backend features (passed through to numr)
cuda = ["numr/cuda"]
wgpu = ["numr/wgpu"]
# rocm = ["numr/rocm"]  # Future: when numr adds ROCm support

# Sparse tensor support (required by graph and pde modules)
sparse = ["numr/sparse"]

# Module features (require sparse support)
graph = ["sparse"]
pde = ["sparse"]

# Precision features
f16 = ["numr/f16"]

[package.metadata.docs.rs]
no-default-features = true
features = ["graph", "pde"]
